--- a/dashboard_gudang.html
+++ b/dashboard_gudang.html
@@ -16,7 +16,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+          rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="vendors/styles/core.css">
     <link rel="stylesheet" type="text/css" href="vendors/styles/icon-font.min.css">
@@ -43,152 +43,155 @@
     </div>
 -->
 
-    <div class="header">
-        <div class="header-left">
-            <div class="menu-icon dw dw-menu"></div>
-        </div>
-        <div class="header-right">
-            <div class="user-info-dropdown">
-                <div class="dropdown">
-                    <a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+<div class="header">
+    <div class="header-left">
+        <div class="menu-icon dw dw-menu"></div>
+    </div>
+    <div class="header-right">
+        <div class="user-info-dropdown">
+            <div class="dropdown">
+                <a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
                         <span class="user-icon">
                             <img src="vendors/images/photo1.jpg" alt="">
                         </span>
-                        <span class="user-name">Johnny B Coleman</span>
+                    <span class="user-name">Johnny B Coleman</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+                    <a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Profile</a>
+                    <a class="dropdown-item" href="login.html"
+                       onclick="localStorage.setItem('user', null);">
+                        <i class="dw dw-logout"></i> Log Out
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                        <a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Profile</a>
-                        <a class="dropdown-item" href="login.html"><i class="dw dw-logout"></i> Log Out</a>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="left-side-bar">
-		<div class="brand-logo">
-            <a href="dashboard.html">
-				<img src="vendors/images/logo.jpg" alt="" class="dark-logo">
-				<img src="vendors/images/logo.jpg" alt="" class="light-logo">
-			</a>
-			<div class="close-sidebar" data-toggle="left-sidebar-close">
-				<i class="ion-close-round"></i>
-			</div>
-		</div>
-		<div class="menu-block customscroll">
-			<div class="sidebar-menu">
-				<ul id="accordion-menu">
-					<li class="dropdown">
-						<a href="javascript:" class="dropdown-toggle">
-							<span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="dashboard.html">Dashboard</a></li>
-						</ul>
-					</li>
-                    <li class="dropdown">
-						<a href="javascript:" class="dropdown-toggle">
-							<span class="micon dw dw-edit2"></span><span class="mtext">Production</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="dashboard_produksi.html">Production Dashboard</a></li>
-							<li><a href="form-produksi.html">Production Form</a></li>
-							<li><a href="form-corrugation.html">Corrugation Form</a></li>
-							<li><a href="production-control.html">Production Control</a></li>
-						</ul>
-					</li>
-					<li class="dropdown">
-						<a href="javascript:" class="dropdown-toggle">
-							<span class="micon dw dw-analytics-21"></span><span class="mtext">Selling</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="dashboard_pemasaran.html">Selling Dashboard</a></li>
-							<li><a href="form-pemasaran.html">Selling Form</a></li>
-							<li><a href="selling-control.html">Selling Control</a></li>
-						</ul>
-					</li>
-					<li class="dropdown">
-						<a href="javascript:" class="dropdown-toggle">
-							<span class="micon dw dw-apartment"></span><span class="mtext">Warehouse</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="dashboard_gudang.html">Warehouse Dashboard</a></li>
-						</ul>
-					</li>					
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="mobile-menu-overlay"></div>
+<div class="left-side-bar">
+    <div class="brand-logo">
+        <a href="dashboard.html">
+            <img src="vendors/images/logo.jpg" alt="" class="dark-logo">
+            <img src="vendors/images/logo.jpg" alt="" class="light-logo">
+        </a>
+        <div class="close-sidebar" data-toggle="left-sidebar-close">
+            <i class="ion-close-round"></i>
+        </div>
+    </div>
+    <div class="menu-block customscroll">
+        <div class="sidebar-menu">
+            <ul id="accordion-menu">
+                <li class="dropdown">
+                    <a href="javascript:" class="dropdown-toggle">
+                        <span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="dashboard.html">Dashboard</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="javascript:" class="dropdown-toggle">
+                        <span class="micon dw dw-edit2"></span><span class="mtext">Production</span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="dashboard_produksi.html">Production Dashboard</a></li>
+                        <li><a href="form-produksi.html">Production Form</a></li>
+                        <li><a href="form-corrugation.html">Corrugation Form</a></li>
+                        <li><a href="production-control.html">Production Control</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="javascript:" class="dropdown-toggle">
+                        <span class="micon dw dw-analytics-21"></span><span class="mtext">Selling</span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="dashboard_pemasaran.html">Selling Dashboard</a></li>
+                        <li><a href="form-pemasaran.html">Selling Form</a></li>
+                        <li><a href="selling-control.html">Selling Control</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="javascript:" class="dropdown-toggle">
+                        <span class="micon dw dw-apartment"></span><span class="mtext">Warehouse</span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="dashboard_gudang.html">Warehouse Dashboard</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="mobile-menu-overlay"></div>
 
-    <div class="main-container">
-        <div class="pd-ltr-20 xs-pd-20-10">
-            <div class="min-height-200px">
-                <div class="page-header">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-12">
-                            <div class="title">
-                                <h4>Warehouse Dashboard</h4>
-                            </div>
-                            <nav aria-label="breadcrumb" role="navigation">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="dashboard.html">Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Warehouse Dashboard</li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-
-                <!--chart start-->
-                <div class="bg-white pd-20 card-box mb-30">
-                    <div id="chart1"></div>
-                </div>
+<div class="main-container">
+    <div class="pd-ltr-20 xs-pd-20-10">
+        <div class="min-height-200px">
+            <div class="page-header">
                 <div class="row">
-                    <div class="col-md-6 mb-30">
-                        <div class="pd-20 card-box height-100-p">
-                            <h4 class="h4 text-blue">Percentage of Types of Incoming Goods</h4>
-                            <div id="chart2"></div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="title">
+                            <h4>Warehouse Dashboard</h4>
                         </div>
+                        <nav aria-label="breadcrumb" role="navigation">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="dashboard.html">Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Warehouse Dashboard</li>
+                            </ol>
+                        </nav>
                     </div>
-                    <div class="col-md-6 mb-30">
-                        <div class="pd-20 card-box height-100-p">
-                            <h4 class="h4 text-blue">Percentage of Types of Outgoing Goods</h4>
-                            <div id="chart3"></div>
-                        </div>
-                    </div>
-                </div>  
-                <div class="bg-white pd-20 card-box mb-30">
-                    <div id="chart4"></div>
                 </div>
-                <div class="bg-white pd-20 card-box mb-30">
-                    <div id="chart5"></div>
-                </div>        
             </div>
-            <!--chart end-->
-            <div class="footer-wrap pd-20 mb-20 card-box">
-				Design for Internal Use Only
-			</div>
+
+            <!--chart start-->
+            <div class="bg-white pd-20 card-box mb-30">
+                <div id="chart1"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-30">
+                    <div class="pd-20 card-box height-100-p">
+                        <h4 class="h4 text-blue">Percentage of Types of Incoming Goods</h4>
+                        <div id="chart2"></div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-30">
+                    <div class="pd-20 card-box height-100-p">
+                        <h4 class="h4 text-blue">Percentage of Types of Outgoing Goods</h4>
+                        <div id="chart3"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-white pd-20 card-box mb-30">
+                <div id="chart4"></div>
+            </div>
+            <div class="bg-white pd-20 card-box mb-30">
+                <div id="chart5"></div>
+            </div>
+        </div>
+        <!--chart end-->
+        <div class="footer-wrap pd-20 mb-20 card-box">
+            Design for Internal Use Only
         </div>
     </div>
+</div>
 
 
-    <script src="vendors/scripts/core.js"></script>
-    <script src="vendors/scripts/script.min.js"></script>
-    <script src="vendors/scripts/process.js"></script>
-    <script src="vendors/scripts/layout-settings.js"></script>
-    <script src="src/plugins/apexcharts/apexcharts.min.js"></script>
-    <script src="src/plugins/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="src/plugins/datatables/js/dataTables.bootstrap4.min.js"></script>
-    <script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
-    <script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
-    <script src="vendors/scripts/apexcharts3-setting.js"></script>
-    <script src="src/plugins/jQuery-Knob-master/jquery.knob.min.js"></script>
-    <script src="vendors/scripts/knob-chart-setting.js"></script>
-    <script src="src/plugins/highcharts-6.0.7/code/highcharts.js"></script>
-    <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-    <script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
-    <script src="vendors/scripts/highchart3-setting.js"></script>
+<script src="vendors/scripts/core.js"></script>
+<script src="vendors/scripts/script.min.js"></script>
+<script src="vendors/scripts/process.js"></script>
+<script src="vendors/scripts/layout-settings.js"></script>
+<script src="src/plugins/apexcharts/apexcharts.min.js"></script>
+<script src="src/plugins/datatables/js/jquery.dataTables.min.js"></script>
+<script src="src/plugins/datatables/js/dataTables.bootstrap4.min.js"></script>
+<script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
+<script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
+<script src="vendors/scripts/apexcharts3-setting.js"></script>
+<script src="src/plugins/jQuery-Knob-master/jquery.knob.min.js"></script>
+<script src="vendors/scripts/knob-chart-setting.js"></script>
+<script src="src/plugins/highcharts-6.0.7/code/highcharts.js"></script>
+<script src="https://code.highcharts.com/highcharts-3d.js"></script>
+<script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
+<script src="vendors/scripts/highchart3-setting.js"></script>
 
 </body>
 
