--- a/form-pemasaran.html
+++ b/form-pemasaran.html
@@ -61,7 +61,10 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
                     <a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i> Profile</a>
-                    <a class="dropdown-item" href="login.html"><i class="dw dw-logout"></i> Log Out</a>
+                    <a class="dropdown-item" href="login.html"
+                       onclick="localStorage.setItem('user', null);">
+                        <i class="dw dw-logout"></i> Log Out
+                    </a>
                 </div>
             </div>
         </div>
